[fix] fix white flickering by implement link

--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,11 @@ html {
 .modal.show {
   opacity: 1;
 }
+
+button {
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+}
